# CMAPSS-Telemetry-Anomoly-Detection

./: .gitignore  README.md  pyproject.toml
configs/: data.yaml
reports/metrics/: isolation_forest_FD001.json  kmeans_FD001.json  pca_reconstruction_FD001.json
src/cmapps_telemetry_anomaly_detection/: cli.py
src/cmapps_telemetry_anomaly_detection/data_ingestion/: kaggle_data_import.py
src/cmapps_telemetry_anomaly_detection/feature_extraction/: feature_extraction.py
src/cmapps_telemetry_anomaly_detection/ml_models/unsupervised/: isolation_forest.py  kmeans.py  pca_reconstruction.py
